# agentic_architecture_test

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb
.kiro/steering/: product.md  structure.md  tech.md
core/: agent.py  agent_llm.py  ingestion.py  rag_population.py  retrieval.py
core/tools/: calculator.py  dictionary.py
lang_core/: agent.py  agent_llm.py  all_state.py
lang_core/rag_core/: chunking.py  ingestion.py  rag_population.py  vectordb.py
lang_core/tools/: calculator.py  dictionary.py  registry.py  retrieval.py
lang_core_multi/: agent.py  agent_llm.py  agent_nodes.py  all_state.py  logger.py
lang_core_multi/mcp/: mcp_client.py  mcp_server.py
lang_core_multi/rag_core/: embedding.py  ingestion.py  rag_population.ipynb  rag_population.py
lang_core_multi/tools/: calculator.py  dictionary.py  retrieval.py
